Version of GET that doesn't create anything
